# Online-Voting-System

backend/: .env.example  .gitignore  README.md  api.md  pyproject.toml
backend/api/: urls.py
backend/api/v1/auth/: serializers.py  urls.py  views.py
backend/api/v1/elections/: serializers.py  urls.py  view.py
backend/api/v1/users/: permissions.py  serializers.py  urls.py  views.py
backend/api/v1/votes/: serializers.py  urls.py  views.py
backend/apps/elections/: admin.py  models.py
backend/apps/elections/migrations/: 0001_initial.py  0002_initial.py
backend/apps/elections/tests/: test_participant_access.py  test_participant_api.py
backend/apps/users/: admin.py  models.py
backend/apps/users/management/commands/: dispatch_scheduled_voter_invites.py
backend/apps/users/migrations/: 0001_initial.py  0002_user_is_verified_alter_membership_role.py  0003_election_voter_invites_sent_at.py
backend/apps/users/tests/: test_auth_and_permissions.py  test_multitenancy.py  test_permission_checks.py  test_registration.py
backend/apps/votes/: admin.py  models.py
backend/apps/votes/migrations/: 0001_initial.py
backend/apps/votes/tests/: test_vote_and_link_api.py  test_vote_flow_and_scope.py
backend/config/: settings.py
backend/services/: blockchain_service.py  membership_service.py  otp_service.py  permission_service.py  voting_link_service.py
backend/utils/: manager.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/api/: authApi.js  organisationApi.js  permissionsApi.js
(+227 files in other folders)
